Initial commit, set up for personal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "screeps-starter-rust"
+name = "kung-fu-screeps"
 version = "0.0.0"
 authors = []
 edition = "2021"
@@ -31,7 +31,7 @@ lto = true
 # -O4 - optimize aggressively for performance
 # -Oz - optimize aggressively for code size
 # -g - leave debug info in place, allowing for more descriptive stack traces on panic
-# --signext-lowering - removes opcodes that the screeps servers can't load (see 
+# --signext-lowering - removes opcodes that the screeps servers can't load (see
 # https://github.com/rustyscreeps/screeps-game-api/issues/391)
 wasm-opt = ["-O4", "--signext-lowering"]
 
