--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ screeps-game-api = "0.23"
 #screeps-game-api = { path = "../screeps-game-api" }
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["console"] }
+serde = "1.0.219"
+serde-wasm-bindgen = "0.6.5"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
